tests/baselines/reference/parserES5SymbolProperty4.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty4.ts(2,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty4.ts (1 errors) ====
    declare class C {
        [Symbol.isRegExp]: string;
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }